manifests/components/mni-mc/0.2.4.yaml
apiVersion: v1
kind: Service
metadata:
  name: mni-mc-api
  namespace: mni-cloud
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: mni-mc-api
---
apiVersion: v1
kind: Service
metadata:
  name: mni-mc-bs
  namespace: mni-cloud
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: mni-mc-bs
---
apiVersion: v1
kind: Service
metadata:
  name: mni-mc-ctr
  namespace: mni-cloud
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: mni-mc-ctr
---
apiVersion: v1
kind: Service
metadata:
  name: mni-mc-dashboard
  namespace: mni-cloud
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: mni-mc-dashboard
---
apiVersion: v1
kind: Service
metadata:
  name: mni-mc-main
  namespace: mni-cloud
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: mni-mc-main
---
apiVersion: v1
kind: Service
metadata:
  name: mni-mc-vm
  namespace: mni-cloud
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: mni-mc-vm
---
apiVersion: v1
kind: Service
metadata:
  name: mni-mc-vpc
  namespace: mni-cloud
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: mni-mc-vpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mni-mc-api
  name: mni-mc-api
  namespace: mni-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mni-mc-api
  template:
    metadata:
      labels:
        app: mni-mc-api
    spec:
      containers:
      - args: []
        image: ghcr.io/mni-cloud/mc-api:main
        imagePullPolicy: Always
        name: mni-mc-api
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: ""
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mni-mc-bs
  name: mni-mc-bs
  namespace: mni-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mni-mc-bs
  template:
    metadata:
      labels:
        app: mni-mc-bs
    spec:
      containers:
      - args: []
        image: ghcr.io/mni-cloud/mc-bs:main
        imagePullPolicy: Always
        name: mni-mc-bs
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: ""
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mni-mc-ctr
  name: mni-mc-ctr
  namespace: mni-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mni-mc-ctr
  template:
    metadata:
      labels:
        app: mni-mc-ctr
    spec:
      containers:
      - args: []
        image: ghcr.io/mni-cloud/mc-ctr:main
        imagePullPolicy: Always
        name: mni-mc-ctr
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: ""
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mni-mc-dashboard
  name: mni-mc-dashboard
  namespace: mni-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mni-mc-dashboard
  template:
    metadata:
      labels:
        app: mni-mc-dashboard
    spec:
      containers:
      - args: []
        image: ghcr.io/mni-cloud/mc-dashboard:main
        imagePullPolicy: Always
        name: mni-mc-dashboard
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: ""
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mni-mc-main
  name: mni-mc-main
  namespace: mni-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mni-mc-main
  template:
    metadata:
      labels:
        app: mni-mc-main
    spec:
      containers:
      - args: []
        image: ghcr.io/mni-cloud/mc-main:main
        imagePullPolicy: Always
        name: mni-mc-main
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: ""
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mni-mc-vm
  name: mni-mc-vm
  namespace: mni-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mni-mc-vm
  template:
    metadata:
      labels:
        app: mni-mc-vm
    spec:
      containers:
      - args: []
        image: ghcr.io/mni-cloud/mc-vm:main
        imagePullPolicy: Always
        name: mni-mc-vm
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: ""
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mni-mc-vpc
  name: mni-mc-vpc
  namespace: mni-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mni-mc-vpc
  template:
    metadata:
      labels:
        app: mni-mc-vpc
    spec:
      containers:
      - args: []
        image: ghcr.io/mni-cloud/mc-vpc:main
        imagePullPolicy: Always
        name: mni-mc-vpc
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: ""
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mni-mc
  namespace: mni-cloud
spec:
  rules:
  - host: hostname.replacethis
    http:
      paths:
      - backend:
          service:
            name: mni-mc-main
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hostname.replacethis
    secretName: mni-mc-cert
